rework the POM and unit test to separate out the pure java unit tests from the CF test that require the server to be running. In the POM I have the plugins that should start up tomcat and then run the integration tests, however that needs some more debugging help so for now it is commented out.