@@ -46,8 +46,8 @@
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -71,10 +71,11 @@
 			<scope>provided</scope>
 		</dependency>
 
-
-
-
-
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.2.1</version>
+		</dependency>
 
 
 		<!--
@@ -82,7 +83,7 @@
 		-->
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
-			<artifactId>ehcache</artifactId>
+			<artifactId>ehcache-core</artifactId>
 			<version>2.6.0</version>
 		</dependency>
 
@@ -111,7 +112,6 @@
 		  -->
 
 
-
 		<!--
 		   Jackson JSON
 		-->
@@ -126,8 +126,6 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.9</version>
 		</dependency>
-
-
 
 
 		<!--
@@ -259,7 +257,6 @@
 		</dependency>
 
 
-
 		<!--
 			SPRING SECURITY
 		-->
@@ -320,8 +317,58 @@
 			<artifactId>spring-integration-event</artifactId>
 			<version>${spring-integration.version}</version>
 		</dependency>
-	</dependencies>
 
+
+
+
+
+
+
+		<!--
+		TEST DEPENDENCIES
+	 	-->
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<version>7.0.26</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-logging-juli</artifactId>
+			<version>7.0.26</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.jdt.core.compiler</groupId>
+			<artifactId>ecj</artifactId>
+			<version>3.7.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<version>7.0.26</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit-dep</artifactId>
+			<version>4.9</version>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
 
 
 	<repositories>
@@ -348,6 +395,22 @@
 		<finalName>apiserver-core-${project.version}</finalName>
 
 		<plugins>
+
+			<plugin>
+				<groupId>org.zeroturnaround</groupId>
+				<artifactId>jrebel-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>generate-rebel-xml</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+
 			<!--
 				Unzip cfusion.war
 			-->
@@ -358,12 +421,12 @@
 				<executions>
 					<execution>
 						<id>prepare</id>
-						<phase>validate</phase>
+						<phase>prepare-package</phase>
 						<configuration>
-							<tasks>
-								<echo message="extract cfusion WAR" />
+							<target>
+								<echo message="extract cfusion WAR"/>
 								<!--unzip src="${cfusion.war}" dest="${extracted.cfusion.war}/" /-->
-							</tasks>
+							</target>
 						</configuration>
 						<goals>
 							<goal>run</goal>
@@ -371,7 +434,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
 
 
 			<plugin>
@@ -395,6 +457,63 @@
 					</webResources>
 				</configuration>
 			</plugin>
+
+
+
+			<!--plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin-->
+
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.2</version>
+			</plugin>
+
+
+
+			<!--
+				TODO : debug this. right now tomcat starts and stops before the integration test can run.
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.12.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.0</version>
+				<configuration>
+					<fork>true</fork>
+					<warSourceDirectory>${project.build.directory}/apiserver-core-${project.version}</warSourceDirectory>
+					<systemProperties>
+							<JAVA_OPTS>-Xms1024m -Xmx4096m -XX:MaxPermSize=1024m -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</JAVA_OPTS>
+					</systemProperties>
+				</configuration>
+				<executions>
+					<execution>
+						<id>run-tomcat</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			 -->
 		</plugins>
 	</build>
 
